Fix: overflow text in task title

--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -127,6 +127,8 @@ section {
                 flex: 1;
                 font-weight: 600;
                 padding: 0.4rem;
+                overflow: hidden;
+                text-overflow: ellipsis;
 
                 &.editable {
                     border: 1px solid $secondary-color-dark;
